[gd_scene load_steps=3 format=3 uid="uid://035l8y7rph61"]

[ext_resource type="Script" uid="uid://cfdfjv46tbqtp" path="res://scripts/title_screen_popup.gd" id="1_ute57"]
[ext_resource type="Texture2D" uid="uid://civkyeql5mvul" path="res://assets/title_popup_background_framed.png" id="2_hwa3h"]

[node name="TitleScreenPopup" type="CanvasLayer"]
script = ExtResource("1_ute57")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(700, 394)
texture = ExtResource("2_hwa3h")

[node name="CreditsLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 50.0
offset_top = 50.0
offset_right = 1350.0
offset_bottom = 675.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Credits and Sources:

Kyle and Robot Party Chat: Setting and Character Ideas

EdwinDamen: Play Scene graphics, backgrounds, lots of other graphics

LittleKittenBit: Full Character Portraits, Character Select Screen Portraits

"

[node name="LicensesLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 50.0
offset_top = 50.0
offset_right = 1350.0
offset_bottom = 675.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "    This game uses Godot Engine, available under the following license:

    Copyright (c) 2014-present Godot Engine contributors. Copyright (c) 2007-2014 Juan Linietsky, Ariel Manzur.

    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


Portions of this software are copyright Â© 2023 The FreeType Project (www.freetype.org). All rights reserved.


    Copyright (c) 2002-2020 Lee Salzman

    Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the \"Software\"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.


    Copyright The Mbed TLS Contributors

    Licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this file except in compliance with the License. You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
"

[node name="InstructionsLabel" type="RichTextLabel" parent="."]
visible = false
offset_left = 50.0
offset_top = 50.0
offset_right = 1350.0
offset_bottom = 675.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Pick pieces from the middle area and place them in your own grid without overlapping another piece.

The dotted block in each piece is the block that will go in the space you click on, as well as the center of rotation (rotation buttons above your grid)

Place at least three pieces next to one another to clear them, build up your powerup, and send garbage to your opponent. The more pieces you clear at once the more garbage you send.

Remove garbage and special pieces by matching normal pieces next to them.

You win when your opponent picks a piece they can't place on their board.

"

[node name="OptionsBox" type="VBoxContainer" parent="."]
offset_left = 500.0
offset_top = 50.0
offset_right = 900.0
offset_bottom = 700.0

[node name="CloseButton" type="Button" parent="."]
offset_left = 500.0
offset_top = 700.0
offset_right = 900.0
offset_bottom = 731.0
text = "Close Popup"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
